--- a/Children.html
+++ b/Children.html
@@ -9,11 +9,11 @@
     </style>
 </HEAD>
 <BODY style="background-color: lightpink;">
-    <h1> Мої дітки </h1>
-    <p align="center"> <a HREF="index.html"> <IMG SRC="5.jpg" alt="Діти Хомки"> </a> </p>
-    <p> <span> С</span>початку я була маленькою, крихітною істотою, яка тільки починала пізнавати навколишній світ.<span> В</span>сі навколо здавались величезними, а я була лише маленьким пухнастим клубочком.<span> А</span>ле я швидко виросла, почала бігати, грати та ставати сильнішою з кожним днем.<span> М</span>ої господарі піклувались про мене, і я почала відчувати себе впевненіше у цьому світі. </p>
-    <p> <span>З</span> часом я завагітніла.<span> Ц</span>е було особливе відчуття — знати, що незабаром я стану мамою.<span> І</span> ось, через деякий час, я народила сім чудових малюків.<span> Ц</span>е були найкращі моменти мого життя!<span> М</span>ої діти були дуже різними.<span> Д</span>еякі з них виглядали так, як я — з тією ж пухнастою темною шкірою і м’якими лапками, а інші більше нагадували їхнього батька.<span> Ц</span>е було дивовижно, бачити, як поєдналися риси двох прекрасних створінь.  </p>
-    <p> <span>Я</span> була дуже щаслива, спостерігаючи, як вони ростуть і змінюються, кожен з них унікальний і особливий по-своєму. </p>
-    <p Align=right> <a HREF="index.html"> <i> На головну </i> </a> </p>
+    <h1> РњРѕС— РґС–С‚РєРё </h1>
+    <p align="center"> <a HREF="index.html"> <IMG SRC="5.jpg" alt="Р”С–С‚Рё РҐРѕРјРєРё"> </a> </p>
+    <p> <span> РЎ</span>РїРѕС‡Р°С‚РєСѓ СЏ Р±СѓР»Р° РјР°Р»РµРЅСЊРєРѕСЋ, РєСЂРёС…С–С‚РЅРѕСЋ С–СЃС‚РѕС‚РѕСЋ, СЏРєР° С‚С–Р»СЊРєРё РїРѕС‡РёРЅР°Р»Р° РїС–Р·РЅР°РІР°С‚Рё РЅР°РІРєРѕР»РёС€РЅС–Р№ СЃРІС–С‚.<span> Р’</span>СЃС– РЅР°РІРєРѕР»Рѕ Р·РґР°РІР°Р»РёСЃСЊ РІРµР»РёС‡РµР·РЅРёРјРё, Р° СЏ Р±СѓР»Р° Р»РёС€Рµ РјР°Р»РµРЅСЊРєРёРј РїСѓС…РЅР°СЃС‚РёРј РєР»СѓР±РѕС‡РєРѕРј.<span> Рђ</span>Р»Рµ СЏ С€РІРёРґРєРѕ РІРёСЂРѕСЃР»Р°, РїРѕС‡Р°Р»Р° Р±С–РіР°С‚Рё, РіСЂР°С‚Рё С‚Р° СЃС‚Р°РІР°С‚Рё СЃРёР»СЊРЅС–С€РѕСЋ Р· РєРѕР¶РЅРёРј РґРЅРµРј.<span> Рњ</span>РѕС— РіРѕСЃРїРѕРґР°СЂС– РїС–РєР»СѓРІР°Р»РёСЃСЊ РїСЂРѕ РјРµРЅРµ, С– СЏ РїРѕС‡Р°Р»Р° РІС–РґС‡СѓРІР°С‚Рё СЃРµР±Рµ РІРїРµРІРЅРµРЅС–С€Рµ Сѓ С†СЊРѕРјСѓ СЃРІС–С‚С–. </p>
+    <p> <span>Р—</span> С‡Р°СЃРѕРј СЏ Р·Р°РІР°РіС–С‚РЅС–Р»Р°.<span> Р¦</span>Рµ Р±СѓР»Рѕ РѕСЃРѕР±Р»РёРІРµ РІС–РґС‡СѓС‚С‚СЏ вЂ” Р·РЅР°С‚Рё, С‰Рѕ РЅРµР·Р°Р±Р°СЂРѕРј СЏ СЃС‚Р°РЅСѓ РјР°РјРѕСЋ.<span> Р†</span> РѕСЃСЊ, С‡РµСЂРµР· РґРµСЏРєРёР№ С‡Р°СЃ, СЏ РЅР°СЂРѕРґРёР»Р° СЃС–Рј С‡СѓРґРѕРІРёС… РјР°Р»СЋРєС–РІ.<span> Р¦</span>Рµ Р±СѓР»Рё РЅР°Р№РєСЂР°С‰С– РјРѕРјРµРЅС‚Рё РјРѕРіРѕ Р¶РёС‚С‚СЏ!<span> Рњ</span>РѕС— РґС–С‚Рё Р±СѓР»Рё РґСѓР¶Рµ СЂС–Р·РЅРёРјРё.<span> Р”</span>РµСЏРєС– Р· РЅРёС… РІРёРіР»СЏРґР°Р»Рё С‚Р°Рє, СЏРє СЏ вЂ” Р· С‚С–С”СЋ Р¶ РїСѓС…РЅР°СЃС‚РѕСЋ С‚РµРјРЅРѕСЋ С€РєС–СЂРѕСЋ С– РјвЂ™СЏРєРёРјРё Р»Р°РїРєР°РјРё, Р° С–РЅС€С– Р±С–Р»СЊС€Рµ РЅР°РіР°РґСѓРІР°Р»Рё С—С…РЅСЊРѕРіРѕ Р±Р°С‚СЊРєР°.<span> Р¦</span>Рµ Р±СѓР»Рѕ РґРёРІРѕРІРёР¶РЅРѕ, Р±Р°С‡РёС‚Рё, СЏРє РїРѕС”РґРЅР°Р»РёСЃСЏ СЂРёСЃРё РґРІРѕС… РїСЂРµРєСЂР°СЃРЅРёС… СЃС‚РІРѕСЂС–РЅСЊ.  </p>
+    <p> <span>РЇ</span> Р±СѓР»Р° РґСѓР¶Рµ С‰Р°СЃР»РёРІР°, СЃРїРѕСЃС‚РµСЂС–РіР°СЋС‡Рё, СЏРє РІРѕРЅРё СЂРѕСЃС‚СѓС‚СЊ С– Р·РјС–РЅСЋСЋС‚СЊСЃСЏ, РєРѕР¶РµРЅ Р· РЅРёС… СѓРЅС–РєР°Р»СЊРЅРёР№ С– РѕСЃРѕР±Р»РёРІРёР№ РїРѕ-СЃРІРѕС”РјСѓ. </p>
+    <p Align=right> <a HREF="index.html"> <i> РќР° РіРѕР»РѕРІРЅСѓ </i> </a> </p>
 </BODY>
 </HTML>
