--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
 <HTML>
-<!-Моя домашня тваринка>
+<!-РњРѕСЏ РґРѕРјР°С€РЅСЏ С‚РІР°СЂРёРЅРєР°>
 <HEAD>
     <meta charset="windows-1251">
-    <TITLE>Моя домашня тваринка</TITLE>
+    <TITLE>РњРѕСЏ РґРѕРјР°С€РЅСЏ С‚РІР°СЂРёРЅРєР°</TITLE>
     <link rel="stylesheet" href="style.css">
 </HEAD>
 <BODY style="background-color: lightblue;">
-    <h1>Моя домашня тваринка</h1>
-    <p align="center"> <IMG SRC="1.jpg" alt="Хомка"> </p>
-    <p> <b>Я - Хомка</b> <p>
-    <p> Мені вже рік. </p>
-    <p> Спочатку я була дуже маленькою, але за пару місяців доволі швидко збільшиласа у розмірах. </p>
-    <p> <b> Трішки про мене: <b> </p>
-    <p> <ul> <li> <a HREF="#My foto"> Мої фото </a> </li> </p>
-    <p> <li> <a HREF="Life.html"> Моє життя </a> </li> </p>
-    <p> <li> <a HREF="Food.html"> Моя їжа </a> </li> </p>
-    <p> <li> <a HREF="Children.html"> Мої дітки </a> </li> </ul> </p>
+    <h1>РњРѕСЏ РґРѕРјР°С€РЅСЏ С‚РІР°СЂРёРЅРєР°</h1>
+    <p align="center"> <IMG SRC="1.jpg" alt="РҐРѕРјРєР°"> </p>
+    <p> <b>РЇ - РҐРѕРјРєР°</b> <p>
+    <p> РњРµРЅС– РІР¶Рµ СЂС–Рє. </p>
+    <p> РЎРїРѕС‡Р°С‚РєСѓ СЏ Р±СѓР»Р° РґСѓР¶Рµ РјР°Р»РµРЅСЊРєРѕСЋ, Р°Р»Рµ Р·Р° РїР°СЂСѓ РјС–СЃСЏС†С–РІ РґРѕРІРѕР»С– С€РІРёРґРєРѕ Р·Р±С–Р»СЊС€РёР»Р°СЃР° Сѓ СЂРѕР·РјС–СЂР°С…. </p>
+    <p> <b> РўСЂС–С€РєРё РїСЂРѕ РјРµРЅРµ: <b> </p>
+    <p> <ul> <li> <a HREF="#My foto"> РњРѕС— С„РѕС‚Рѕ </a> </li> </p>
+    <p> <li> <a HREF="Life.html"> РњРѕС” Р¶РёС‚С‚СЏ </a> </li> </p>
+    <p> <li> <a HREF="Food.html"> РњРѕСЏ С—Р¶Р° </a> </li> </p>
+    <p> <li> <a HREF="Children.html"> РњРѕС— РґС–С‚РєРё </a> </li> </ul> </p>
     <SCRIPT type="text/javascript">
     window.setInterval (new_frame,2500);
     var inc = 1;
@@ -35,12 +35,12 @@
     <IMG SRC="3.jpg" hspace=35,0%>
     <IMG SRC="4.jpg" hspace=35,0%>
     <fieldset>
-    <legend><h2>Враження</h2></legend>
-    <label for="T1">Ваше враження від перегляду сторінок: </label>
-    <input type="text" name="text1" size="20" maxlength="50" value="чудові, середні" id="T1">
-    <input type="submit" name="S1" value="Відправити">
+    <legend><h2>Р’СЂР°Р¶РµРЅРЅСЏ</h2></legend>
+    <label for="T1">Р’Р°С€Рµ РІСЂР°Р¶РµРЅРЅСЏ РІС–Рґ РїРµСЂРµРіР»СЏРґСѓ СЃС‚РѕСЂС–РЅРѕРє: </label>
+    <input type="text" name="text1" size="20" maxlength="50" value="С‡СѓРґРѕРІС–, СЃРµСЂРµРґРЅС–" id="T1">
+    <input type="submit" name="S1" value="Р’С–РґРїСЂР°РІРёС‚Рё">
     </fieldset>
-    <p Align=right> <i> Заходьте ще. Завжди вам раді! </i> </p>
-    <p Align=right> <i> Ревіна Ксенія </i> </p>
+    <p Align=right> <i> Р—Р°С…РѕРґСЊС‚Рµ С‰Рµ. Р—Р°РІР¶РґРё РІР°Рј СЂР°РґС–! </i> </p>
+    <p Align=right> <i> Р РµРІС–РЅР° РљСЃРµРЅС–СЏ </i> </p>
 </BODY>
 </HTML>
