--- a/Food.html
+++ b/Food.html
@@ -8,48 +8,48 @@
      th{face:Times New Roman;}
     </style>
 </HEAD>
-<BODY style="background-color: 	royalblue;">
-    <h1> Моя їжа </h1>
+<BODY style="background-color:   royalblue;">
+    <h1> РњРѕСЏ С—Р¶Р° </h1>
     <p align="center"> <div> <a HREF="index.html"> 
     <IMG id="a" SRC="12.jpg"> 
-    <IMG id="b" SRC="6.jpg" alt="Хомка"> 
+    <IMG id="b" SRC="6.jpg" alt="РҐРѕРјРєР°"> 
     <IMG id="c" SRC="11.jpg"> </a> </div> </p>
     <p>  .  </p>
     <table bordercolor="blue" border="4" bgcolor="lightskyblue">
         <tr>
-        <th colspan=3> Їжа </th>
+        <th colspan=3> Р‡Р¶Р° </th>
         </tr>
         <tr>
-        <th> Найменування </th>
-        <th> Склад </th>
-        <th> Ціна </th>
+        <th> РќР°Р№РјРµРЅСѓРІР°РЅРЅСЏ </th>
+        <th> РЎРєР»Р°Рґ </th>
+        <th> Р¦С–РЅР° </th>
         </tr>
         <tr>
-        <th> Корм Природа «Коктейль» для хом'яків </th>
-        <th> Цей корм містить розплющені зерна, кероб, спеціальні трав'яні та овочево-зернові грануляти, що забезпечують повноцінне харчування. До складу входять також зневоднені овочі та фрукти, які позитивно впливають на пігментацію шерсті. </th>
-        <th> 50 грн. </th>
+        <th> РљРѕСЂРј РџСЂРёСЂРѕРґР° В«РљРѕРєС‚РµР№Р»СЊВ» РґР»СЏ С…РѕРј'СЏРєС–РІ </th>
+        <th> Р¦РµР№ РєРѕСЂРј РјС–СЃС‚РёС‚СЊ СЂРѕР·РїР»СЋС‰РµРЅС– Р·РµСЂРЅР°, РєРµСЂРѕР±, СЃРїРµС†С–Р°Р»СЊРЅС– С‚СЂР°РІ'СЏРЅС– С‚Р° РѕРІРѕС‡РµРІРѕ-Р·РµСЂРЅРѕРІС– РіСЂР°РЅСѓР»СЏС‚Рё, С‰Рѕ Р·Р°Р±РµР·РїРµС‡СѓСЋС‚СЊ РїРѕРІРЅРѕС†С–РЅРЅРµ С…Р°СЂС‡СѓРІР°РЅРЅСЏ. Р”Рѕ СЃРєР»Р°РґСѓ РІС…РѕРґСЏС‚СЊ С‚Р°РєРѕР¶ Р·РЅРµРІРѕРґРЅРµРЅС– РѕРІРѕС‡С– С‚Р° С„СЂСѓРєС‚Рё, СЏРєС– РїРѕР·РёС‚РёРІРЅРѕ РІРїР»РёРІР°СЋС‚СЊ РЅР° РїС–РіРјРµРЅС‚Р°С†С–СЋ С€РµСЂСЃС‚С–. </th>
+        <th> 50 РіСЂРЅ. </th>
         </tr>
         <tr>
-        <th> Корм Природа «Хом'ячок» </th>
-        <th> Цей корм складається з пшениці, ячменю, вівса, горіхів, гранульованої трав'яної суміші, льону, вівсяних пластівців, сухофруктів, кукурудзи, насіння гарбуза та соняшника. </th>
-        <th> 100 грн. </th>
+        <th> РљРѕСЂРј РџСЂРёСЂРѕРґР° В«РҐРѕРј'СЏС‡РѕРєВ» </th>
+        <th> Р¦РµР№ РєРѕСЂРј СЃРєР»Р°РґР°С”С‚СЊСЃСЏ Р· РїС€РµРЅРёС†С–, СЏС‡РјРµРЅСЋ, РІС–РІСЃР°, РіРѕСЂС–С…С–РІ, РіСЂР°РЅСѓР»СЊРѕРІР°РЅРѕС— С‚СЂР°РІ'СЏРЅРѕС— СЃСѓРјС–С€С–, Р»СЊРѕРЅСѓ, РІС–РІСЃСЏРЅРёС… РїР»Р°СЃС‚С–РІС†С–РІ, СЃСѓС…РѕС„СЂСѓРєС‚С–РІ, РєСѓРєСѓСЂСѓРґР·Рё, РЅР°СЃС–РЅРЅСЏ РіР°СЂР±СѓР·Р° С‚Р° СЃРѕРЅСЏС€РЅРёРєР°. </th>
+        <th> 100 РіСЂРЅ. </th>
         </tr>
         <tr>
-        <th> Корм Природа «Фієста Хом'ячок» </th>
-        <th> Основний раціон для хом'яків та інших маленьких гризунів, розроблений ветеринарами. Склад включає овес, пшеницю, ячмінь, кукурудзу, горох, насіння гарбуза та соняшника, вівсяні пластівці, зерновий гранулят, горіхи, шматочки фруктів і овочів. </th>
-        <th> 85 грн. </th>
+        <th> РљРѕСЂРј РџСЂРёСЂРѕРґР° В«Р¤С–С”СЃС‚Р° РҐРѕРј'СЏС‡РѕРєВ» </th>
+        <th> РћСЃРЅРѕРІРЅРёР№ СЂР°С†С–РѕРЅ РґР»СЏ С…РѕРј'СЏРєС–РІ С‚Р° С–РЅС€РёС… РјР°Р»РµРЅСЊРєРёС… РіСЂРёР·СѓРЅС–РІ, СЂРѕР·СЂРѕР±Р»РµРЅРёР№ РІРµС‚РµСЂРёРЅР°СЂР°РјРё. РЎРєР»Р°Рґ РІРєР»СЋС‡Р°С” РѕРІРµСЃ, РїС€РµРЅРёС†СЋ, СЏС‡РјС–РЅСЊ, РєСѓРєСѓСЂСѓРґР·Сѓ, РіРѕСЂРѕС…, РЅР°СЃС–РЅРЅСЏ РіР°СЂР±СѓР·Р° С‚Р° СЃРѕРЅСЏС€РЅРёРєР°, РІС–РІСЃСЏРЅС– РїР»Р°СЃС‚С–РІС†С–, Р·РµСЂРЅРѕРІРёР№ РіСЂР°РЅСѓР»СЏС‚, РіРѕСЂС–С…Рё, С€РјР°С‚РѕС‡РєРё С„СЂСѓРєС‚С–РІ С– РѕРІРѕС‡С–РІ. </th>
+        <th> 85 РіСЂРЅ. </th>
         </tr>
         <tr>
-        <th> Корм Padovan Grandmix Criceti для хом'яків, мишей та дрібних гризунів </th>
-        <th> Цей корм складається з різних видів злаків, насіння, фруктів і овочів, що забезпечують необхідні поживні речовини для активного способу життя хом'яка. </th>
-        <th> 125 грн. </th>
+        <th> РљРѕСЂРј Padovan Grandmix Criceti РґР»СЏ С…РѕРј'СЏРєС–РІ, РјРёС€РµР№ С‚Р° РґСЂС–Р±РЅРёС… РіСЂРёР·СѓРЅС–РІ </th>
+        <th> Р¦РµР№ РєРѕСЂРј СЃРєР»Р°РґР°С”С‚СЊСЃСЏ Р· СЂС–Р·РЅРёС… РІРёРґС–РІ Р·Р»Р°РєС–РІ, РЅР°СЃС–РЅРЅСЏ, С„СЂСѓРєС‚С–РІ С– РѕРІРѕС‡С–РІ, С‰Рѕ Р·Р°Р±РµР·РїРµС‡СѓСЋС‚СЊ РЅРµРѕР±С…С–РґРЅС– РїРѕР¶РёРІРЅС– СЂРµС‡РѕРІРёРЅРё РґР»СЏ Р°РєС‚РёРІРЅРѕРіРѕ СЃРїРѕСЃРѕР±Сѓ Р¶РёС‚С‚СЏ С…РѕРј'СЏРєР°. </th>
+        <th> 125 РіСЂРЅ. </th>
         </tr>
         <tr>
-        <th> Корм Versele-Laga Classic Hamster </th>
-        <th> Цей корм містить різноманітні зерна, насіння та додаткові інгредієнти, які відповідають потребам хом'яків. </th>
-        <th> 84 грн. </th>
+        <th> РљРѕСЂРј Versele-Laga Classic Hamster </th>
+        <th> Р¦РµР№ РєРѕСЂРј РјС–СЃС‚РёС‚СЊ СЂС–Р·РЅРѕРјР°РЅС–С‚РЅС– Р·РµСЂРЅР°, РЅР°СЃС–РЅРЅСЏ С‚Р° РґРѕРґР°С‚РєРѕРІС– С–РЅРіСЂРµРґС–С”РЅС‚Рё, СЏРєС– РІС–РґРїРѕРІС–РґР°СЋС‚СЊ РїРѕС‚СЂРµР±Р°Рј С…РѕРј'СЏРєС–РІ. </th>
+        <th> 84 РіСЂРЅ. </th>
         </tr>
     </table>
-    <p Align=right> <a HREF="index.html"> <i> На головну </i> </a> </p>
+    <p Align=right> <a HREF="index.html"> <i> РќР° РіРѕР»РѕРІРЅСѓ </i> </a> </p>
 </BODY>
 </HTML>
